[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "test-actions"
authors = [{ name = "Dimitri RODARIE", email = "d.rodarie@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "numpy~=1.19",
    "scipy~=1.5",
    "pynrrd~=1.0",
    "toml~=0.10.0",
]

[project.optional-dependencies]
test = [
    "coverage~=7.3",
]
dev = [
    "pre-commit~=3.5",
    "black~=24.0",
    "isort~=5.12"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "1.2.6"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[tool.bumpversion.parts.pre_l]
values = ["dev", "a", "b", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "test_actions/__init__.py"
