[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "test-actions"
authors = [{ name = "Dimitri RODARIE", email = "d.rodarie@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.10"
version = "1.3.0"
dynamic = ["description"]
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pynrrd (>=1.1.3,<2.0.0)",
]

[project.optional-dependencies]
test = ["coverage (>=7.6.12,<8.0.0)"]
dev = ["black (>=25.1.0,<26.0.0)", "isort (>=6.0.0,<7.0.0)", "pre-commit (>=4.1.0,<5.0.0)", "bump-my-version (>=0.32.1,<0.33.0)"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "1.3.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[tool.bumpversion.parts.pre_l]
values = ["dev", "a", "b", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "test_actions/__init__.py"
